--- a/Chocolate.ipynb
+++ b/Chocolate.ipynb
@@ -2499,7 +2499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Splitting  and Scalling Data"
+    "## 3.1 Data Preprocessing"
    ]
   },
   {
@@ -3097,7 +3097,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 RandomForestRegressor() using RandomizedSearchCV("
+    "## 3.2 RandomForestRegressor() using RandomizedSearchCV("
    ]
   },
   {
@@ -3366,7 +3366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 RandomForestRegressor() using GridSearchCV("
+    "## 3.2 RandomForestRegressor() using GridSearchCV("
    ]
   },
   {
@@ -3590,7 +3590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 NN Model"
+    "## 3.3 NN Model"
    ]
   },
   {
@@ -3641,7 +3641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3.1 NN Model - basic"
+    "### 3.3.1 NN Model - basic"
    ]
   },
   {
@@ -3859,7 +3859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3.2 NN Model - adding dropout and regularization"
+    "### 3.3.2 NN Model - adding dropout and regularization"
    ]
   },
   {
@@ -4027,7 +4027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3.3 NN Model - only adding regularization"
+    "### 3.3.3 NN Model - only adding regularization"
    ]
   },
   {
@@ -4195,7 +4195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3.4 NN Model - increasinf number of layer size and adding dropout rate`"
+    "### 3.3.4 NN Model - increasinf number of layer size and adding dropout rate`"
    ]
   },
   {
@@ -4363,7 +4363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4 NN Model using embedings"
+    "## 3.4 NN Model using embedings"
    ]
   },
   {
@@ -4632,7 +4632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3.5 NN Model - using HP tuning"
+    "## 3.5 NN Model - using HP tuning"
    ]
   },
   {
@@ -4791,7 +4791,9 @@
   {
    "cell_type": "code",
    "execution_count": 468,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
